force-app/main/default/objects/Assessment_Response__c/fields/Assessment_Instance__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Instance</label>
    <referenceTo>Assessment_Instance__c</referenceTo>
    <relationshipLabel>Assessment Responses</relationshipLabel>
    <relationshipName>Assessment_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>