force-app/main/default/objects/Assessment_Response__c/fields/Response_Value__c.field-meta.xml
<CustomField>
    <fullName>Response_Value__c</fullName>
    <label>Response Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>