force-app/main/default/objects/Assessment_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Assessment_Instance__c</columns>
    <columns>Question__c</columns>
    <columns>Response_Value__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Record_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>